# sst-labs-ai-finance

./: .gitignore  Makefile  README.md
backend/: .flake8  .isort.cfg  .pylintrc  .yamllint  Makefile  mypy.ini
backend/sst-auth-service/: .pre-commit-config.yaml  Makefile  pyproject.toml
backend/sst-health-service/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
backend/sst-health-service/src/sst_health_service/: main.py
backend/sst-notification-service/: Makefile
backend/sst-transaction-service/: Makefile
frontend/apps/: Makefile
mobile/: Makefile
